# HException

./: .gitignore  .gitmodules  HError.cabal  HException.cabal  README.md  stack.yaml
doc/: Control-HException.html  Control-Monad-Trans-HExcept.html  HException.haddock  HException.txt  doc-index.html  doc-index.json  index-frames.html  index.html  mini_Control-HException.html  mini_Control-Monad-Trans-HExcept.html
doc/src/: Control-HException-Internal.html  Control-HException.html  Control-Monad-Trans-HExcept.html  Control.HException.Internal.html  Control.HException.html  Control.Monad.Trans.HExcept.html
examples/: Animals.hs  Main.hs
src/: HError.hs
src/Control/: HException.hs
src/Control/HException/: Internal.hs
src/Control/Monad/Trans/: HExcept.hs
test/: Spec.hs  Test.hs
test/Control/HException/: Test.hs
test/Control/Monad/Trans/HExcept/: Test.hs
