cabal-version: 1.12

name:           HError
version:        0.1.0.0
description:    Heterogeneously typed error handling.
homepage:       https://github.com/hgrano/HError
bug-reports:    https://github.com/hgrano/HError/issues
author:         Huw Grano
maintainer:     huw.grano@gmail.com
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/hgrano/HError

library
  exposed-modules:
      HError
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror -O
  build-depends:
      base >= 4.6 && < 5
    , HList == 0.5.0.1
    , tagged >= 0.8.6
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
        test
  ghc-options: -Wall -Werror -O
  build-depends:
      HError
    , HUnit
    , base >= 4.6 && < 5
  default-language: Haskell2010
